ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
.no-padding-container {
    padding: 0px!important;

    @include md{
        padding-left: 1rem !important;
        padding-right: 1rem !important;
    }
    .cmp-teaser {
        display: flex;
        width: 100%;
        flex-wrap: wrap;
        flex-direction: row-reverse;
        @include box-shadow();

        @include sm {
            flex-direction: column-reverse;
        }

        @include md {
            display: block;
        }

        .cmp-teaser__image {
            margin-top: 5px;
            img {
                width: 100%;
            }
        }

        .cmp-teaser__content {
            padding: 0.5rem 4rem 1.5rem 1.5rem;
            width: 50%;

            @include sm {
                width: 100%;
                padding: 1rem 1rem 2rem;
            }

            @include md {
                width: 100%;
                padding: 1rem 1rem 2rem;
            }

            .cmp-teaser__description {
                p {
                    color: $black;
                    font-size: $font14;
                    line-height: 19px;
                }
                h4{
                    @include md{
                        @include font-family-lato;
                        font-weight: 700;
                        font-size: $font18;
                        margin-bottom: 1rem;
                        margin-top: 0;
                    }
                }
            }

            .cmp-teaser__action-container {
                a {
                    letter-spacing: 2px;
                    padding: .5rem 1rem 1rem 2rem;
                    position: relative;
                    font-size: 14px;
                    @include md{
                        font-size: $font12;
                    }
                }

                :hover {
                    text-decoration: underline;
                }

                :before {
                    @include link-arrow;
                    border: solid $arrow-border-green;
                    top: 5px;
                    border-width: 0 1px 1px 0;
                }
            }
        }
    }

    @include sm {
        .cmp-teaser-mob-rev {
            flex-direction: column-reverse;
            display: flex;
        }
    }

    @include md {
        .cmp-teaser-mob-rev {
            flex-direction: column-reverse;
            display: flex;
        }
    }

      .cmp-teaser__action-container {
        margin-top: 5rem;
        margin-left: -2rem;

        @include sm {
            margin-top: 0rem;
        }

        @include md {
            margin-top: 2rem;
        }
    }
    p{
        color: $paracolor!important;
        line-height: 19px;
    }
}

